Fixed top pane on mobile devices

--- a/ai/static/ai/css/chatstyle.css
+++ b/ai/static/ai/css/chatstyle.css
@@ -18,6 +18,9 @@ body {
 @media (max-width: 992px) {
   .top-panel {
     background: linear-gradient(to left, #ed562c 0%, #ef4d1f 100%);
+    position: fixed;
+    width: 100%;
+    z-index: 100;
   }
 }
 #data-container {
@@ -182,7 +185,7 @@ body {
     padding: 0;
   }
 }
-.chat-box-wrapper {
+#chat-box-wrapper {
   color: #fff;
   height: calc(100% - 70px);
   width: 100%;
@@ -190,6 +193,12 @@ body {
   padding: 10px;
   padding-bottom: 10px;
   padding-top: 1px;
+}
+@media (max-width: 992px) {
+  #chat-box-wrapper {
+    padding-top: 70px;
+    height: 100%;
+  }
 }
 .chat-bottom {
   background-color: #cacfd2;
@@ -222,7 +231,7 @@ body {
   width: calc(100% - 50px);
   overflow-x: hidden;
 }
-.chat-messages {
+#chat-msg-box {
   height: calc(100% - 40px);
   overflow-y: auto;
   overflow-x: hidden;
